feat: add pdf file to project

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </a>
       </div>
         <div class="button-wrapper">
-          <a href="/files/Alexandra_Redkova_Frontend_CV.pdf" download class="download-btn">
+          <a href="/cv-redkova/files/Alexandra_Redkova_CV.pdf" download class="download-btn">
             <svg class="download-icon" width="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M5 20H19M12 4V16M12 16L15 13M12 16L9 13" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
               </svg>
@@ -170,7 +170,7 @@
 
       <section class="certificate">
         <h3>Certificate</h3>
-        <a href="https://app.rs.school/certificate/8yiq7gsv" class="certificate-item">
+        <a href="https://app.rs.school/certificate/8yiq7gsv" target="_blank" class="certificate-item">
           <svg xmlns="http://www.w3.org/2000/svg" width="20" viewBox="0 0 64 64" fill="none">
             <g clip-path="url(#clip0_5701_38384)">
             <circle cx="32" cy="32" r="32" fill="black"/>
