fix: broken download button

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Alexandra Redkova</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
-    <link rel="icon" href="../../assets/favicon/favicon-16x16.png" type="image/png" sizes="16x16">
-    <link rel="icon" href="../../assets/favicon/favicon-32x32.png" type="image/png" sizes="32x32">
-    <link rel="apple-touch-icon" href="../../assets/favicon/apple-touch-icon.png" type="image/png" sizes="180x180">
+    <link rel="icon" href="./../assets/favicon/favicon-16x16.png" type="image/png" sizes="16x16">
+    <link rel="icon" href="./../assets/favicon/favicon-32x32.png" type="image/png" sizes="32x32">
+    <link rel="apple-touch-icon" href="./../assets/favicon/apple-touch-icon.png" type="image/png" sizes="180x180">
 </head>
 <body>
   <div class="cv-page">
@@ -59,7 +59,7 @@
         </a>
       </div>
         <div class="button-wrapper">
-          <a href="../../files/Alexandra_Redkova_CV.pdf" download class="download-btn">
+          <a href="/files/Alexandra_Redkova_CV.pdf" download="Alexandra_Redkova_CV.pdf" class="download-btn">
             <svg class="download-icon" width="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M5 20H19M12 4V16M12 16L15 13M12 16L9 13" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
               </svg>
