--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Alexandra Redkova</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
-    <link rel="icon" href="//assets/favicon/favicon-16x16.png" type="image/png" sizes="16x16">
-    <link rel="icon" href="//cv-redkova/assets/favicon/favicon-32x32.png" type="image/png" sizes="32x32">
-    <link rel="apple-touch-icon" href="//assets/favicon/apple-touch-icon.png" type="image/png" sizes="180x180">
+    <link rel="icon" href="/../assets/favicon/favicon-16x16.png" type="image/png" sizes="16x16">
+    <link rel="icon" href="/../cv-redkova/assets/favicon/favicon-32x32.png" type="image/png" sizes="32x32">
+    <link rel="apple-touch-icon" href="/../assets/favicon/apple-touch-icon.png" type="image/png" sizes="180x180">
 </head>
 <body>
   <div class="cv-page">
