refactor: update folder structure

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Alexandra Redkova</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
-    <link rel="icon" href="/../assets/favicon/favicon-16x16.png" type="image/png" sizes="16x16">
-    <link rel="icon" href="/../cv-redkova/assets/favicon/favicon-32x32.png" type="image/png" sizes="32x32">
-    <link rel="apple-touch-icon" href="/../assets/favicon/apple-touch-icon.png" type="image/png" sizes="180x180">
+    <link rel="icon" href="../../assets/favicon/favicon-16x16.png" type="image/png" sizes="16x16">
+    <link rel="icon" href="../../cv-redkova/assets/favicon/favicon-32x32.png" type="image/png" sizes="32x32">
+    <link rel="apple-touch-icon" href="../../assets/favicon/apple-touch-icon.png" type="image/png" sizes="180x180">
 </head>
 <body>
   <div class="cv-page">
@@ -22,8 +22,6 @@
       <h1>Alexandra Redkova</h1>
       <h2>Front-end Developer</h2>
       </section>
-
-      <!-- Contacts -->
 
       <section class="contacts">
         <div class="contacts-wrap">
@@ -102,8 +100,6 @@
 
     <main class="content">
 
-      <!-- Experience -->
-      
       <section class="experience">
         <h3>Work Experience</h3>
         <div class="job">
@@ -186,8 +182,10 @@
           JavaScript/Front-end 2024Q4
         </a>
       </section>
+
     </main>
   </div>
+  
   <footer class="footer">
     <p>© 2026 Alexandra Redkova</p>
   </footer>
